# 201930195_EDD_Practica

./: Avion.cpp  Avion.h  CMakeLists.txt  Equipaje.cpp  Equipaje.h  MenuConsola.cpp  MenuConsola.h  Pasajero.cpp  Pasajero.h  Reportes.cpp  aviones.json  main.cpp  movimientos.txt  pasajeros.json
Estructura/: Cola.cpp  Cola.h  ListaCircularDoble.cpp  ListaCircularDoble.h  ListaDobleEnlazada.cpp  ListaDobleEnlazada.h  Nodo.cpp  Nodo.h  Pila.cpp  Pila.h
otras/: GeneradorReportes.cpp  GeneradorReportes.h  GestorAeropuerto.cpp  GestorAeropuerto.h  GestorArchivos.cpp  GestorArchivos.h
